# graphql-engine-rs

./: .gitignore  .kodiak.toml  Cargo.toml  Makefile  README.md
.github/workflows/: clippy.yml  rust.yml
migrate/: functions.sql  schema.sql
src/: context.rs  db.rs  error.rs  gql_types.rs  logger.rs  main.rs  metadata.rs  options.rs  routes.rs  server.rs  types.rs  utils.rs
src/handlers/: graphql.rs  healthz.rs  metadata.rs  mod.rs
src/websocket/: mod.rs  server.rs  types.rs
src/ws/: mod.rs  types.rs
test/GraphQL/basic_query/: query.graphql  response.json
test/GraphQL/basic_query_test_key_order/: query.graphql  response.json
test/GraphQL/basic_query_with_limit_offset_distinct_on/: query.graphql  response.json
test/GraphQL/query_order_by_asc/: query.graphql  response.json
test/GraphQL/query_order_by_asc_desc/: query.graphql  response.json
test/GraphQL/query_order_by_desc/: query.graphql  response.json
test/GraphQL/query_with_aliases/: query.graphql  response.json
test/metadata/export_metadata/: export_metadata.json
test/metadata/import_metadata/: import_metadata.json
test/metadata/track_table/: track_table_authors.json  track_table_users.json
test/metadata/untrack_table/: untrack_table_authors.json  untrack_table_users.json
