[package]
name = "graphql-engine-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
diesel = "1.4.7"
graphql-parser = "0.3.0"
lazy_static = "1.4.0"
serde = "1.0.126"
serde_json = "1.0.64"
tokio = "1.9.0"
warp = "0.3.1"
