[package]
name = "graphql-engine-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
graphql-parser = "0.3.0"
postgres = "0.19.1"
fern = { version = "0.6.0", features = ["colored"] }
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json", "uuid"] }
convert_case = "0.4.0"
serde = "1.0.126"
serde_json = "1.0.64"

[dev-dependencies]
lazy_static = "1.4.0"
